# jarvis-etl

./: .gitignore  README.md  main.py  pyproject.toml
app/config/: core.py  logging_config.py  settings.py
app/services/: document_service.py  embedding_service.py  queue_service.py  vectordb_service.py
app/utils/: service_utils.py
app/utils/serdes/: document_serdes.py  embedding_serdes.py  serdes_protocol.py
app/workers/: document_worker.py  embedding_worker.py  vectordb_worker.py
