[project]
name = "jarvis-etl"
version = "0.1.0"
description = "Data Processing Pipeline for Jarvis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.0.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "redis>=7.0.1",
    "typing>=3.10.0.0",
]
